fix: fixed code smells after sonarqube analysis feat: sonarqube stage